Dockerfile starts pgwire, logs less
Moved to ubuntu base (temurin 17) for arm support

Intention with logback config is only errors will get the full java thread/class etc.