@@ -1,17 +1,20 @@
-FROM openjdk:15-alpine
+FROM eclipse-temurin:17
 
 WORKDIR /usr/local/lib/xtdb
 
-RUN apk --no-cache add curl
-
-# TODO allow customising Xms/Xmx etc
 ENTRYPOINT ["java", \
     "-Dclojure.main.report=stderr", \
-    "-Xms3g","-Xmx3g", \
+    "-Dlogback.configurationFile=logback.xml", \
+    "--add-opens=java.base/java.nio=ALL-UNNAMED", \
+    "-Dio.netty.tryReflectionSetAccessible=true", \
+    "-Xms1g","-Xmx1g", \
+    "-XX:MaxDirectMemorySize=2g", \
+    "-XX:MaxMetaspaceSize=512m", \
     "-jar","core2-standalone.jar"]
 
 HEALTHCHECK --start-period=15s --timeout=3s \
     CMD curl -f http://localhost:3000/status || exit 1
 
 ADD docker/core2.edn core2.edn
+ADD docker/logback.xml logback.xml
 ADD target/core2-standalone.jar core2-standalone.jar
